[package]
name = "context-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI for building, resolving, and inspecting context caches"
repository = "https://github.com/contextenginehq/context-cli"
homepage = "https://github.com/contextenginehq/context-engine"
documentation = "https://docs.rs/context-cli"
readme = "README.md"
keywords = ["context", "cli", "deterministic", "mcp", "llm"]
categories = ["command-line-utilities"]

include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "NOTICE",
]

[[bin]]
name = "context"
path = "src/main.rs"

[dependencies]
context-core = { version = "0.1.0", path = "../context-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
